2000-05-29  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report-2.scm (make-account-subheading): 
	added the ability to display balances at start-of-report date
	when sorting by accounts.  Also replaced gnc:split-get-amount
	(which doesn't exist) with gnc:split-get-value for amount sorting.

	* doc/guile-hackers.txt: Added pointers to g-wrap now that it's
	not part of the main gnucash distribution.

2000-05-24  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/SplitLedger.c: some simplification, some additional
	complexity :) Fixed a crash-bug with traversing out of the
	pending transaction and rolling it back. Fixed traversal out
	of the blank line of a multi-split transaction that has been
	edited.

2000-05-23  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine: removed QIF routines from the engine.

	* src/scm/options.scm: add a currency option type.

	* src/gnome/dialog-options.c: add support for currency options.

	* src/gnome/dialog-utils.c (gnc_ui_account_field_box_create): used
	the new currency editor widget.

	* src/gnome/gnc-currency-edit.c: new widget for picking currencies.

2000-05-22  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/guile/guile-util.c (gnc_depend): new function to access the
	gnc:depend guile function.

2000-05-21  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-reconcile.c: use share balances when
	reconciling stock, mutual fund, and currency accounts.

2000-05-20  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Account.c (xaccAccountRecomputeBalance): added share,
	cleared share, and reconciled share balance tracking, along with
	api calls for getting them.

	* src/engine/Transaction.c: add calls to get share cleared and
	reconciled balance.

	* src/engine/Query.c: use g_list_prepend and then reverse when
	gathering splits. When pruning the list, prune from the beginning,
	not the end, per the original semantics. Handle the case when
	q->max_splits is 0.
